--- a/Proyecto web/detall_galetes.html
+++ b/Proyecto web/detall_galetes.html
@@ -12,6 +12,7 @@
       <ul>
         <li><a href="index.html">Inici</a></li>
         <li><a href="contingut.html">Receptes</a></li>
+        <li><a href="detall_pasta.html">Recepta destacada</a></li>
         <li><a href="info.html">Informació</a></li>
       </ul>
     </nav>
