Fix HTML encoding issues in detall_galetes.html

--- a/Proyecto web/detall_galetes.html
+++ b/Proyecto web/detall_galetes.html
@@ -46,7 +46,7 @@
         <li>A poc a poc, incorpora la barreja de farina al bol amb la mantega i l’ou, i mescla amb cura fins que obtinguis una massa homogènia.</li>
         <li>Afegeix les gotetes de xocolata i barreja de forma suau perquè es distribueixin</li>
         <li>Forma petites boles de massa (de l’ample d’una cullerada) i col·loca-les sobre una safata de forn coberta amb paper de forn, deixant espai entre elles perquè s’expandeixin.</li>
-        <li>Enforna durant 10–12 minuts o fins que les galetes estiguin lleugerament daurades pels costats segons recepta tradicional. :contentReference[oaicite:1]{index=1}</li>
+        <li>Enforna durant 10–12 minuts o fins que les galetes estiguin lleugerament daurades pels costats segons la recepta tradicional.</li>
         <li>Quan estiguin llestes, treu la safata del forn i deixa reposar les galetes uns 5 minuts abans de transferir-les a una reixeta per refredar completament.</li>
       </ol>
     </article>
@@ -72,3 +72,4 @@
     </footer>
 </body>
 </html>
+
