--- a/Proyecto web/detall_pasta.html
+++ b/Proyecto web/detall_pasta.html
@@ -42,8 +42,7 @@
       <ol>
         <li>Posa a bullir una olla gran d’aigua amb sal. Quan bulli, afegeix els espaguetis i cuina segons les indicacions del paquet fins que estiguin “al dente”.</li>
         <li>Mentre es cou la pasta, talla la panceta (o guanciale) en trossos petits i fregeix-la en una paella a foc mitjà fins que estigui daurada i la seva greix s’hagi fos. Retira la paella del foc.</li>
-        <li>En un bol, barreja els ous (o iogemas) amb el formatge ratllat i una bona quantitat de pebre negre. Si la mescla és molt densa, pots afegir una mica de l’aigua de cocció de la pasta reservada per diluir-la. Aquesta tècnica ajuda a fer-la cremosa. Aquesta preparació segueix la tècnica tradicional sense utilitzar nata. :contentReference[oaicite:0]{index=0}</li>
-        <li>Quan la pasta estigui cuita, escórrega-la deixant una mica de l’aigua de cocció (per exemple, una cullerada o dues).</li>
+        <li>En un bol, barreja els ous (o iogemas) amb el formatge ratllat i una bona quantitat de pebre negre. Si la mescla és molt densa, afegeix una mica de l’aigua de cocció per fer-la més cremosa. Aquesta preparació segueix la tècnica tradicional sense utilitzar nata.</li>
         <li>Mou ràpidament la pasta escorreguda a la paella amb la panceta, vigilants de que no estigui al foc fort (millor tenir la paella fora del foc) per evitar cuinar l’ou massa.</li>
         <li>Aboca la mescla d’ou i formatge sobre la pasta i barreja ràpidament. La calor residual de la pasta i de la paella farà que l’ou s’espesseixi de manera suau i cremosa. Si veus que queda massa espessa, afegeix una mica més de l’aigua de cocció reservada.</li>
         <li>Serveix immediatament amb una mica més de formatge ratllat i pebre negre si vols.</li>
@@ -71,3 +70,4 @@
     </footer>
 </body>
 </html>
+
