Update navigation with login and contact links
Added login and contact links to the navigation menu.

--- a/Proyecto web/Index.html
+++ b/Proyecto web/Index.html
@@ -19,6 +19,8 @@
                 <li><a href="contingut.html">Receptes</a></li>
                 <li><a href="detall_pasta.html">Recepta destacada</a></li>
                 <li><a href="info.html">Informació</a></li>
+                <li><a href="login.html">Iniciar sesió</a></li>
+                <li><a href="contacte.html">Contacte</a></li>
         </ul>
     </nav>
     </header>
@@ -48,8 +50,9 @@
         <p>
             <a href="https://instagram.com/receptant">Instagram</a> |
             <a href="https://tiktok.com/@receptant">TikTok</a> |
-            <a href="receptant-contacte@gmail.com">Contacte</a>
+            <a href="contacte.html">Contacte</a>
         </p>
     </footer>
 </body>
 </html>
+
