--- a/Proyecto web/contingut.html
+++ b/Proyecto web/contingut.html
@@ -13,10 +13,12 @@
 
         <nav>
             <ul>
-                <li><a href="index.html">Inici</a></li>
+               <li><a href="index.html">Inici</a></li>
                 <li><a href="contingut.html">Receptes</a></li>
                 <li><a href="detall_pasta.html">Recepta destacada</a></li>
                 <li><a href="info.html">Informació</a></li>
+                <li><a href="login.html">Iniciar sesió</a></li>
+                <li><a href="contacte.html">Contacte</a></li>
             </ul>
         </nav>
     </header>
@@ -53,3 +55,4 @@
     </footer>
 </body>
 </html>
+
