--- a/Proyecto web/detall_truita.html
+++ b/Proyecto web/detall_truita.html
@@ -11,9 +11,12 @@
     <h1>Truita de Patates</h1>
     <nav>
       <ul>
-        <li><a href="index.html">Inici</a></li>
-        <li><a href="contingut.html">Receptes</a></li>
-        <li><a href="info.html">Informació</a></li>
+        <<li><a href="index.html">Inici</a></li>
+                <li><a href="contingut.html">Receptes</a></li>
+                <li><a href="detall_pasta.html">Recepta destacada</a></li>
+                <li><a href="info.html">Informació</a></li>
+                <li><a href="login.html">Iniciar sesió</a></li>
+                <li><a href="contacte.html">Contacte</a></li>
       </ul>
     </nav>
   </header>
@@ -68,3 +71,4 @@
     </footer>
 </body>
 </html>
+
