--- a/Proyecto web/info.html
+++ b/Proyecto web/info.html
@@ -12,10 +12,12 @@
         <h1>Receptant</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Inici</a></li>
+               <li><a href="index.html">Inici</a></li>
                 <li><a href="contingut.html">Receptes</a></li>
                 <li><a href="detall_pasta.html">Recepta destacada</a></li>
                 <li><a href="info.html">Informació</a></li>
+                <li><a href="login.html">Iniciar sesió</a></li>
+                <li><a href="contacte.html">Contacte</a></li>
             </ul>
         </nav>
     </header>
@@ -67,3 +69,4 @@
     </footer>
 </body>
 </html>
+
