Fix HTML formatting and improve navigation links

--- a/Proyecto web/detall_pasta.html
+++ b/Proyecto web/detall_pasta.html
@@ -12,8 +12,11 @@
     <nav>
       <ul>
         <li><a href="index.html">Inici</a></li>
-        <li><a href="contingut.html">Receptes</a></li>
-        <li><a href="info.html">Informació</a></li>
+                <li><a href="contingut.html">Receptes</a></li>
+                <li><a href="detall_pasta.html">Recepta destacada</a></li>
+                <li><a href="info.html">Informació</a></li>
+                <li><a href="login.html">Iniciar sesió</a></li>
+                <li><a href="contacte.html">Contacte</a></li>
       </ul>
     </nav>
   </header>
@@ -70,4 +73,5 @@
     </footer>
 </body>
 </html>
+
 
